AC_INIT(danlann, [1.0.2], [wrobell@pld-linux.org])
AM_INIT_AUTOMAKE([dist-bzip2])

AM_PATH_PYTHON(2.4)

AC_OUTPUT([
    Makefile
    bin/Makefile
    css/Makefile
    doc/Makefile
    examples/Makefile
    examples/in/Makefile
    js/Makefile
    src/Makefile
    src/danlann/Makefile
    src/danlann/test/Makefile
])
