# directory of danlann supported templates
tmpldir = $(datadir)/danlann/tmpl

# files for all templates
nobase_tmpl_DATA = \
	basic/album.st \
	basic/exif.st \
	basic/gallery.st \
	basic/gindex.st \
	basic/page.st \
	basic/photo.st \
	basic/pindex.st \
	basic/sindex.st

EXTRA_DIST = $(nobase_tmpl_DATA)
